@@ -1,5 +1,2 @@
-DIST smplayer2-0.7.2_p20120522.tar.xz 1034192 RMD160 a305037c9dcce6dfdb479f9ff7ff63ef983cc1a2 SHA1 03d573b7b6abfe8e4f53651b97e298decf5d39ad SHA256 ae5dfe328208dc34a53d1439a9cbc1b4f3197fca2dd6e10f2fa5725296617e49
-EBUILD smplayer2-0.7.2_p20120522.ebuild 1214 RMD160 fefbde5ad0c4234b4be8c717b0eec61c95b26c7b SHA1 70c0d05b5736b06dfcc6e297b7bbe6e3da6428d7 SHA256 c4529b9e20024c07d964706c670e9fae3df4ac2b622c1ef4f3595fa6bb073fb1
-EBUILD smplayer2-9999.ebuild 1190 RMD160 a412bda1c34e72623ca96653da5b214f7928787e SHA1 733818dd286b09a9f375d6eaa0696a54050dfcf6 SHA256 842480133510aef149d6d1f5e64084ba4a3d92788c1abe25834fd9789f2632c8
-MISC ChangeLog 1717 RMD160 012dd81bf9fc3ed79f9a4af2178fe91d757c07d6 SHA1 8d86d4d2ed6c7bc039de7852a184fc99628d7f81 SHA256 026c2ffdfa808f93c789c3bcefeec6ba5cff2b8218c3a875e67227b1ff38ba21
-MISC metadata.xml 450 RMD160 cd2c4ebf0bf6117c1f687debb852f047f1fe26b3 SHA1 5b722a28c53371f1842de9a5f5a94845dd72353c SHA256 71db0f73a5c68b0c249a1ae3c3bc12e31bf6ad51af8451706b0327c5d515e7c7
+DIST smplayer2-0.7.2_p20120522.tar.xz 1034192 SHA256 ae5dfe328208dc34a53d1439a9cbc1b4f3197fca2dd6e10f2fa5725296617e49 SHA512 00cb91447d75a0a6ef9aecd98c657de7b07cc8d0c09a73ab87ffc374a048e7926fb069a234920f2eca2c02a6798473c062347d3cf0763695bb8d035bc170cdc0 WHIRLPOOL b9d36e4a5b76b8d0fb8f56047688b0ffeb19c40ee985ab3e7ad39fbefbf98cc6e3a6200f7c5d73d9b373bc791ecc06ef6a7b40b275fe67695d236547efe7d98e
+DIST smplayer2-0.7.3_p20120524.tar.xz 1033904 SHA256 36683db9a421abd4a08e2bea3708bc98d9cc8c2e91fb955c5c977c74c56e98f9 SHA512 a55454d9cef6b6c349af98e06dacb2517620068a9acad2e6f803d5111737a193e71f96082737c7621073893a1fd85d7a8193a332fde63fb69a0de6b3d4df6c08 WHIRLPOOL c2c4fb8f0e7cedc2fbbd00fcee65a39757c770a94769c7d30e5ac05f0a831a21074b712e74321e8c5c87b7bdf66d1935cb55ffea2d75805ce8198c4d9116f59e
